--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="bot">
-        <input type="button" value="Talk to mentalChat" id="talk_button">
+        <a href="templates\index.html">
+            <button>Answers by Sentry</button>
+        </a>
+          
     </div>
     
 </body>
